# serializer version: 1
# name: test_fetching_devices
  list([
    dict({
      'components': list([
        dict({
          'capabilities': list([
            <Capability.COLOR_TEMPERATURE: 'colorTemperature'>,
            <Capability.SWITCH: 'switch'>,
            <Capability.SWITCH_LEVEL: 'switchLevel'>,
            <Capability.HEALTH_CHECK: 'healthCheck'>,
            <Capability.REFRESH: 'refresh'>,
            <Capability.CIRCADIAN_LIGHTING_EFFECT: 'synthetic.lightingEffectCircadian'>,
            <Capability.FADE_LIGHTNING_EFFECT: 'synthetic.lightingEffectFade'>,
          ]),
          'id': 'main',
          'label': 'main',
        }),
      ]),
      'device_id': '440063de-a200-40b5-8a6b-f3399eaa0370',
      'device_manufacturer_code': 'Signify Netherlands B.V.',
      'device_network_type': None,
      'device_type_id': None,
      'device_type_name': None,
      'label': 'Bathroom spot',
      'location_id': '88a3a314-f0c8-40b4-bb44-44ba06c9c42f',
      'name': 'hue-color-temperature-bulb',
      'type': <DeviceType.VIPER: 'VIPER'>,
    }),
    dict({
      'components': list([
        dict({
          'capabilities': list([
            <Capability.SWITCH: 'switch'>,
            <Capability.COLOR_CONTROL: 'colorControl'>,
            <Capability.COLOR_TEMPERATURE: 'colorTemperature'>,
            <Capability.SWITCH_LEVEL: 'switchLevel'>,
            <Capability.HEALTH_CHECK: 'healthCheck'>,
            <Capability.REFRESH: 'refresh'>,
            <Capability.HUE_SYNC_MODE: 'samsungim.hueSyncMode'>,
            <Capability.CIRCADIAN_LIGHTING_EFFECT: 'synthetic.lightingEffectCircadian'>,
            <Capability.FADE_LIGHTNING_EFFECT: 'synthetic.lightingEffectFade'>,
          ]),
          'id': 'main',
          'label': 'main',
        }),
      ]),
      'device_id': 'cb958955-b015-498c-9e62-fc0c51abd054',
      'device_manufacturer_code': 'Signify Netherlands B.V.',
      'device_network_type': None,
      'device_type_id': None,
      'device_type_name': None,
      'label': 'Standing light',
      'location_id': '88a3a314-f0c8-40b4-bb44-44ba06c9c42f',
      'name': 'hue-rgbw-color-bulb',
      'type': <DeviceType.VIPER: 'VIPER'>,
    }),
    dict({
      'components': list([
        dict({
          'capabilities': list([
            <Capability.COLOR_TEMPERATURE: 'colorTemperature'>,
            <Capability.SWITCH: 'switch'>,
            <Capability.SWITCH_LEVEL: 'switchLevel'>,
            <Capability.HEALTH_CHECK: 'healthCheck'>,
            <Capability.REFRESH: 'refresh'>,
            <Capability.CIRCADIAN_LIGHTING_EFFECT: 'synthetic.lightingEffectCircadian'>,
            <Capability.FADE_LIGHTNING_EFFECT: 'synthetic.lightingEffectFade'>,
          ]),
          'id': 'main',
          'label': 'main',
        }),
      ]),
      'device_id': '0b2ed6c7-dc39-42fd-ab64-8f1c75c1fad0',
      'device_manufacturer_code': 'Signify Netherlands B.V.',
      'device_network_type': None,
      'device_type_id': None,
      'device_type_name': None,
      'label': 'Hue ambiance spot 3',
      'location_id': '88a3a314-f0c8-40b4-bb44-44ba06c9c42f',
      'name': 'hue-color-temperature-bulb',
      'type': <DeviceType.VIPER: 'VIPER'>,
    }),
    dict({
      'components': list([
        dict({
          'capabilities': list([
            <Capability.COLOR_TEMPERATURE: 'colorTemperature'>,
            <Capability.SWITCH: 'switch'>,
            <Capability.SWITCH_LEVEL: 'switchLevel'>,
            <Capability.HEALTH_CHECK: 'healthCheck'>,
            <Capability.REFRESH: 'refresh'>,
            <Capability.CIRCADIAN_LIGHTING_EFFECT: 'synthetic.lightingEffectCircadian'>,
            <Capability.FADE_LIGHTNING_EFFECT: 'synthetic.lightingEffectFade'>,
          ]),
          'id': 'main',
          'label': 'main',
        }),
      ]),
      'device_id': 'a456cbd5-0503-46be-acc4-54e189dc6ff4',
      'device_manufacturer_code': 'Signify Netherlands B.V.',
      'device_network_type': None,
      'device_type_id': None,
      'device_type_name': None,
      'label': 'Sink',
      'location_id': '88a3a314-f0c8-40b4-bb44-44ba06c9c42f',
      'name': 'hue-color-temperature-bulb',
      'type': <DeviceType.VIPER: 'VIPER'>,
    }),
    dict({
      'components': list([
        dict({
          'capabilities': list([
            <Capability.MOTION_SENSOR: 'motionSensor'>,
            <Capability.BATTERY: 'battery'>,
            <Capability.REFRESH: 'refresh'>,
            <Capability.HEALTH_CHECK: 'healthCheck'>,
          ]),
          'id': 'main',
          'label': 'main',
        }),
      ]),
      'device_id': '08da6244-b3ad-4c45-b005-d8572bd9138f',
      'device_manufacturer_code': 'Signify Netherlands B.V.',
      'device_network_type': None,
      'device_type_id': None,
      'device_type_name': None,
      'label': 'Hue motion sensor 1',
      'location_id': '88a3a314-f0c8-40b4-bb44-44ba06c9c42f',
      'name': 'c2c-motion-2',
      'type': <DeviceType.VIPER: 'VIPER'>,
    }),
    dict({
      'components': list([
        dict({
          'capabilities': list([
            <Capability.COLOR_TEMPERATURE: 'colorTemperature'>,
            <Capability.SWITCH: 'switch'>,
            <Capability.SWITCH_LEVEL: 'switchLevel'>,
            <Capability.HEALTH_CHECK: 'healthCheck'>,
            <Capability.REFRESH: 'refresh'>,
            <Capability.CIRCADIAN_LIGHTING_EFFECT: 'synthetic.lightingEffectCircadian'>,
            <Capability.FADE_LIGHTNING_EFFECT: 'synthetic.lightingEffectFade'>,
          ]),
          'id': 'main',
          'label': 'main',
        }),
      ]),
      'device_id': '297b909c-ca9a-4517-ba42-7412269cd00e',
      'device_manufacturer_code': 'Signify Netherlands B.V.',
      'device_network_type': None,
      'device_type_id': None,
      'device_type_name': None,
      'label': 'Hue ambiance spot 2',
      'location_id': '88a3a314-f0c8-40b4-bb44-44ba06c9c42f',
      'name': 'hue-color-temperature-bulb',
      'type': <DeviceType.VIPER: 'VIPER'>,
    }),
    dict({
      'components': list([
        dict({
          'capabilities': list([
            <Capability.COLOR_TEMPERATURE: 'colorTemperature'>,
            <Capability.SWITCH: 'switch'>,
            <Capability.SWITCH_LEVEL: 'switchLevel'>,
            <Capability.HEALTH_CHECK: 'healthCheck'>,
            <Capability.REFRESH: 'refresh'>,
            <Capability.CIRCADIAN_LIGHTING_EFFECT: 'synthetic.lightingEffectCircadian'>,
            <Capability.FADE_LIGHTNING_EFFECT: 'synthetic.lightingEffectFade'>,
          ]),
          'id': 'main',
          'label': 'main',
        }),
      ]),
      'device_id': '4d4f5261-dc3a-4e31-b8f4-15699c934f62',
      'device_manufacturer_code': 'Signify Netherlands B.V.',
      'device_network_type': None,
      'device_type_id': None,
      'device_type_name': None,
      'label': 'Hue ambiance spot 4',
      'location_id': '88a3a314-f0c8-40b4-bb44-44ba06c9c42f',
      'name': 'hue-color-temperature-bulb',
      'type': <DeviceType.VIPER: 'VIPER'>,
    }),
    dict({
      'components': list([
        dict({
          'capabilities': list([
            <Capability.SWITCH: 'switch'>,
            <Capability.COLOR_CONTROL: 'colorControl'>,
            <Capability.COLOR_TEMPERATURE: 'colorTemperature'>,
            <Capability.SWITCH_LEVEL: 'switchLevel'>,
            <Capability.HEALTH_CHECK: 'healthCheck'>,
            <Capability.REFRESH: 'refresh'>,
            <Capability.HUE_SYNC_MODE: 'samsungim.hueSyncMode'>,
            <Capability.CIRCADIAN_LIGHTING_EFFECT: 'synthetic.lightingEffectCircadian'>,
            <Capability.FADE_LIGHTNING_EFFECT: 'synthetic.lightingEffectFade'>,
          ]),
          'id': 'main',
          'label': 'main',
        }),
      ]),
      'device_id': '9eaad965-638d-48c2-8aab-e97aa031226e',
      'device_manufacturer_code': 'Signify Netherlands B.V.',
      'device_network_type': None,
      'device_type_id': None,
      'device_type_name': None,
      'label': 'Night light',
      'location_id': '88a3a314-f0c8-40b4-bb44-44ba06c9c42f',
      'name': 'hue-rgbw-color-bulb',
      'type': <DeviceType.VIPER: 'VIPER'>,
    }),
    dict({
      'components': list([
        dict({
          'capabilities': list([
            <Capability.SWITCH: 'switch'>,
            <Capability.COLOR_CONTROL: 'colorControl'>,
            <Capability.COLOR_TEMPERATURE: 'colorTemperature'>,
            <Capability.SWITCH_LEVEL: 'switchLevel'>,
            <Capability.HEALTH_CHECK: 'healthCheck'>,
            <Capability.REFRESH: 'refresh'>,
            <Capability.HUE_SYNC_MODE: 'samsungim.hueSyncMode'>,
            <Capability.CIRCADIAN_LIGHTING_EFFECT: 'synthetic.lightingEffectCircadian'>,
            <Capability.FADE_LIGHTNING_EFFECT: 'synthetic.lightingEffectFade'>,
          ]),
          'id': 'main',
          'label': 'main',
        }),
      ]),
      'device_id': '4f43eaf7-b3d1-4d26-be8e-807b37dfe8e0',
      'device_manufacturer_code': 'Signify Netherlands B.V.',
      'device_network_type': None,
      'device_type_id': None,
      'device_type_name': None,
      'label': 'Kitchen',
      'location_id': '88a3a314-f0c8-40b4-bb44-44ba06c9c42f',
      'name': 'hue-rgbw-color-bulb',
      'type': <DeviceType.VIPER: 'VIPER'>,
    }),
    dict({
      'components': list([
        dict({
          'capabilities': list([
            <Capability.SWITCH: 'switch'>,
            <Capability.COLOR_CONTROL: 'colorControl'>,
            <Capability.COLOR_TEMPERATURE: 'colorTemperature'>,
            <Capability.SWITCH_LEVEL: 'switchLevel'>,
            <Capability.HEALTH_CHECK: 'healthCheck'>,
            <Capability.REFRESH: 'refresh'>,
            <Capability.HUE_SYNC_MODE: 'samsungim.hueSyncMode'>,
            <Capability.CIRCADIAN_LIGHTING_EFFECT: 'synthetic.lightingEffectCircadian'>,
            <Capability.FADE_LIGHTNING_EFFECT: 'synthetic.lightingEffectFade'>,
          ]),
          'id': 'main',
          'label': 'main',
        }),
      ]),
      'device_id': '3cd2ce09-6e19-48a9-b296-558d8cc55726',
      'device_manufacturer_code': 'Signify Netherlands B.V.',
      'device_network_type': None,
      'device_type_id': None,
      'device_type_name': None,
      'label': 'Tv',
      'location_id': '88a3a314-f0c8-40b4-bb44-44ba06c9c42f',
      'name': 'hue-rgbw-color-bulb',
      'type': <DeviceType.VIPER: 'VIPER'>,
    }),
    dict({
      'components': list([
        dict({
          'capabilities': list([
            <Capability.SWITCH: 'switch'>,
            <Capability.COLOR_CONTROL: 'colorControl'>,
            <Capability.COLOR_TEMPERATURE: 'colorTemperature'>,
            <Capability.SWITCH_LEVEL: 'switchLevel'>,
            <Capability.HEALTH_CHECK: 'healthCheck'>,
            <Capability.REFRESH: 'refresh'>,
            <Capability.HUE_SYNC_MODE: 'samsungim.hueSyncMode'>,
            <Capability.CIRCADIAN_LIGHTING_EFFECT: 'synthetic.lightingEffectCircadian'>,
            <Capability.FADE_LIGHTNING_EFFECT: 'synthetic.lightingEffectFade'>,
          ]),
          'id': 'main',
          'label': 'main',
        }),
      ]),
      'device_id': '5ed8ef33-96dc-4d53-8ad1-4a15e6361c1e',
      'device_manufacturer_code': 'Signify Netherlands B.V.',
      'device_network_type': None,
      'device_type_id': None,
      'device_type_name': None,
      'label': 'Bureau',
      'location_id': '88a3a314-f0c8-40b4-bb44-44ba06c9c42f',
      'name': 'hue-rgbw-color-bulb',
      'type': <DeviceType.VIPER: 'VIPER'>,
    }),
    dict({
      'components': list([
        dict({
          'capabilities': list([
            <Capability.COLOR_TEMPERATURE: 'colorTemperature'>,
            <Capability.SWITCH: 'switch'>,
            <Capability.SWITCH_LEVEL: 'switchLevel'>,
            <Capability.HEALTH_CHECK: 'healthCheck'>,
            <Capability.REFRESH: 'refresh'>,
            <Capability.CIRCADIAN_LIGHTING_EFFECT: 'synthetic.lightingEffectCircadian'>,
            <Capability.FADE_LIGHTNING_EFFECT: 'synthetic.lightingEffectFade'>,
          ]),
          'id': 'main',
          'label': 'main',
        }),
      ]),
      'device_id': 'f15b3d69-7452-4b21-a27c-d3db3c84e2d4',
      'device_manufacturer_code': 'Signify Netherlands B.V.',
      'device_network_type': None,
      'device_type_id': None,
      'device_type_name': None,
      'label': 'Hue ambiance spot 5',
      'location_id': '88a3a314-f0c8-40b4-bb44-44ba06c9c42f',
      'name': 'hue-color-temperature-bulb',
      'type': <DeviceType.VIPER: 'VIPER'>,
    }),
    dict({
      'components': list([
        dict({
          'capabilities': list([
            <Capability.SWITCH: 'switch'>,
            <Capability.COLOR_CONTROL: 'colorControl'>,
            <Capability.COLOR_TEMPERATURE: 'colorTemperature'>,
            <Capability.SWITCH_LEVEL: 'switchLevel'>,
            <Capability.HEALTH_CHECK: 'healthCheck'>,
            <Capability.REFRESH: 'refresh'>,
            <Capability.HUE_SYNC_MODE: 'samsungim.hueSyncMode'>,
            <Capability.CIRCADIAN_LIGHTING_EFFECT: 'synthetic.lightingEffectCircadian'>,
            <Capability.FADE_LIGHTNING_EFFECT: 'synthetic.lightingEffectFade'>,
          ]),
          'id': 'main',
          'label': 'main',
        }),
      ]),
      'device_id': 'be1152d6-cad0-4859-b4a6-5770e63dd0b5',
      'device_manufacturer_code': 'Signify Netherlands B.V.',
      'device_network_type': None,
      'device_type_id': None,
      'device_type_name': None,
      'label': 'Bed',
      'location_id': '88a3a314-f0c8-40b4-bb44-44ba06c9c42f',
      'name': 'hue-rgbw-color-bulb',
      'type': <DeviceType.VIPER: 'VIPER'>,
    }),
    dict({
      'components': list([
        dict({
          'capabilities': list([
            <Capability.COLOR_TEMPERATURE: 'colorTemperature'>,
            <Capability.SWITCH: 'switch'>,
            <Capability.SWITCH_LEVEL: 'switchLevel'>,
            <Capability.HEALTH_CHECK: 'healthCheck'>,
            <Capability.REFRESH: 'refresh'>,
            <Capability.CIRCADIAN_LIGHTING_EFFECT: 'synthetic.lightingEffectCircadian'>,
            <Capability.FADE_LIGHTNING_EFFECT: 'synthetic.lightingEffectFade'>,
          ]),
          'id': 'main',
          'label': 'main',
        }),
      ]),
      'device_id': '53fa938e-7586-41ca-84e7-ccc6bcba94df',
      'device_manufacturer_code': 'Signify Netherlands B.V.',
      'device_network_type': None,
      'device_type_id': None,
      'device_type_name': None,
      'label': 'Hue ambiance spot 1',
      'location_id': '88a3a314-f0c8-40b4-bb44-44ba06c9c42f',
      'name': 'hue-color-temperature-bulb',
      'type': <DeviceType.VIPER: 'VIPER'>,
    }),
    dict({
      'components': list([
        dict({
          'capabilities': list([
            <Capability.SWITCH: 'switch'>,
            <Capability.COLOR_CONTROL: 'colorControl'>,
            <Capability.COLOR_TEMPERATURE: 'colorTemperature'>,
            <Capability.SWITCH_LEVEL: 'switchLevel'>,
            <Capability.HEALTH_CHECK: 'healthCheck'>,
            <Capability.REFRESH: 'refresh'>,
            <Capability.HUE_SYNC_MODE: 'samsungim.hueSyncMode'>,
            <Capability.CIRCADIAN_LIGHTING_EFFECT: 'synthetic.lightingEffectCircadian'>,
            <Capability.FADE_LIGHTNING_EFFECT: 'synthetic.lightingEffectFade'>,
          ]),
          'id': 'main',
          'label': 'main',
        }),
      ]),
      'device_id': 'd472222b-0e19-4d33-8375-b2abf6c9df08',
      'device_manufacturer_code': 'Signify Netherlands B.V.',
      'device_network_type': None,
      'device_type_id': None,
      'device_type_name': None,
      'label': 'Bed',
      'location_id': '88a3a314-f0c8-40b4-bb44-44ba06c9c42f',
      'name': 'hue-rgbw-color-bulb',
      'type': <DeviceType.VIPER: 'VIPER'>,
    }),
  ])
# ---
# name: test_fetching_single_device
  dict({
    'components': list([
      dict({
        'capabilities': list([
          <Capability.COLOR_TEMPERATURE: 'colorTemperature'>,
          <Capability.SWITCH: 'switch'>,
          <Capability.SWITCH_LEVEL: 'switchLevel'>,
          <Capability.HEALTH_CHECK: 'healthCheck'>,
          <Capability.REFRESH: 'refresh'>,
          <Capability.CIRCADIAN_LIGHTING_EFFECT: 'synthetic.lightingEffectCircadian'>,
          <Capability.FADE_LIGHTNING_EFFECT: 'synthetic.lightingEffectFade'>,
        ]),
        'id': 'main',
        'label': 'main',
      }),
    ]),
    'device_id': '440063de-a200-40b5-8a6b-f3399eaa0370',
    'device_manufacturer_code': 'Signify Netherlands B.V.',
    'device_network_type': None,
    'device_type_id': None,
    'device_type_name': None,
    'label': 'Bathroom spot',
    'location_id': '88a3a314-f0c8-40b4-bb44-44ba06c9c42f',
    'name': 'hue-color-temperature-bulb',
    'type': <DeviceType.VIPER: 'VIPER'>,
  })
# ---
